--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 </div>
 
                 <div id="error-message" class="error-message">
-                    <i class="fas fa-exclamation-circle"></i> Only Srisanth with number 7672006017 is allowed to login
+                    <i class="fas fa-exclamation-circle"></i> Please Entre Correct Name & Password
                 </div>
 
                 <button type="submit" class="btn">Generate OTP</button>
@@ -323,7 +323,7 @@
             </div>
 
             <button id="proceed-btn" class="btn" style="display: none; margin-top: 20px;">
-                Proceed to Study Stark
+                Proceed PW Portal
             </button>
 
             <div class="footer">
@@ -346,7 +346,9 @@
             // Define the only allowed user
             const allowedUser = {
                 name: "Srisanth",
-                number: "7672006017"
+                number: "7672006017",
+                name: "Adhivishnu",
+                number: "9032226055"
             };
             
             // Generate random OTP
