--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                 
                 // Redirect to Study Stark
                 setTimeout(() => {
-                    window.location.href = 'https://study.stark.in';
+                    window.location.href = 'https://studystark.site/';
                 }, 1500);
             });
         });
