--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Srisanth Portal</title>
+    <title>PW Unlocked Portal</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -525,7 +525,7 @@
                 <div class="logo">
                     <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhDj-7hATBvyP8yglPY1xhL-cU4GP0nFkfTrk3soDPAZHI2JuwCsPLvTn2yjBrK8dxPwDSeH2dXrtLi3Ag8BjpXCT7dCkmRHmCB0iMphHTjq-4t6l2DIs6WCNVYMzZQW8UDm5GlcsZ2-oUeo0WzjX5ydURow14zx9g0gMOf0A-pZN48mEZyGbLgasIva98/s2048/Picsart_25-09-19_18-59-20-679.png" alt="Srisanth Portal Logo">
                 </div>
-                <h1>Srisanth Portal</h1>
+                <h1>PW Unlocked Portal</h1>
                 <p class="subtitle">Enter access key to continue</p>
             </div>
 
