--- a/index.html
+++ b/index.html
@@ -670,9 +670,43 @@
             
             // Define allowed users
             const allowedUsers = [
-                { name: "Srisanth", id: "SH2527" },
-                { name: "Adhivishnu", id: "SH2527" },
-                { name: "Nidhi", id: "SH2527" }
+                { name: "Akanksha", id: "SH2503" },
+{ name: "Geethika", id: "SH2505" },
+{ name: "Preeti Kumari Meena", id: "SH2506" },
+{ name: "Jeevan", id: "SH2507" },
+{ name: "Sai Tejaswini", id: "SH2508" },
+{ name: "Goshitha", id: "SH2509" },
+{ name: "Pujitha", id: "SH2510" },
+{ name: "Sowjanya", id: "SH2511" },
+{ name: "Moulisri", id: "SH2512" },
+{ name: "Sai Sri", id: "SH2513" },
+{ name: "Durga", id: "SH2514" },
+{ name: "Amrutha", id: "SH2515" },
+{ name: "Sai Eswari", id: "SH2516" },
+{ name: "Manasa", id: "SH2517" },
+{ name: "Pranathi", id: "SH2518" },
+{ name: "Depika", id: "SH2519" },
+{ name: "Nidhi", id: "SH2520" },
+{ name: "Gethika Pri", id: "SH2521" },
+{ name: "Vishal", id: "SH2522" },
+{ name: "Siddu", id: "SH2523" },
+{ name: "Sriram", id: "SH2524" },
+{ name: "Jai Shankar", id: "SH2525" },
+{ name: "Akshant", id: "SH2526" },
+{ name: "Srisanth", id: "SH2527" },
+{ name: "Adhi Vishnu", id: "SH2528" },
+{ name: "Charan", id: "SH2529" },
+{ name: "Ratheesh", id: "SH2530" },
+{ name: "Sridhar", id: "SH2531" },
+{ name: "Charan Kiran", id: "SH2532" },
+{ name: "Durga Kumar", id: "SH2533" },
+{ name: "Mahadev", id: "SH2534" },
+{ name: "Bharat", id: "SH2535" },
+{ name: "Kurma Jnan", id: "SH2536" },
+{ name: "Neeraj", id: "SH2537" },
+{ name: "Aaron", id: "SH2538" },
+{ name: "N Karthik", id: "SH2539" }
+
             ];
             
             let currentUser = null;
