--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
                 <i class="fas fa-exclamation-circle"></i>
             </div>
             <h3 class="confirmation-title">Confirm Proceed to Portal</h3>
-            <p class="confirmation-message">Are you sure you want to proceed to the portal? Please make sure you have watched the tutorial video and completed any necessary payment steps.</p>
+            <p class="confirmation-message">Are you sure you want to proceed to the portal? Please make sure you have watched the tutorial video and completed any necessary steps.</p>
             <div class="confirmation-buttons">
                 <button class="confirmation-btn cancel" id="cancel-proceed">Cancel</button>
                 <button class="confirmation-btn confirm" id="confirm-proceed">Yes, Proceed</button>
@@ -851,6 +851,8 @@
             
             // Define allowed users
             const allowedUsers = [
+                { name: "Kalpana", id: "SH2501" },
+                { name: "Hasini", id: "SH2502" },
                 { name: "Akanksha", id: "SH2503" },
                 { name: "Geethika", id: "SH2505" },
                 { name: "Preeti Kumari Meena", id: "SH2506" },
@@ -886,7 +888,9 @@
                 { name: "Kurma Jnan", id: "SH2536" },
                 { name: "Neeraj", id: "SH2537" },
                 { name: "Aaron", id: "SH2538" },
-                { name: "N Karthik", id: "SH2539" }
+                { name: "N Karthik", id: "SH2539" },
+                { name: "Bishwa", id: "SH2540" },
+                { name: "Aman", id: "SH2541" },
             ];
             
             let currentUser = null;
@@ -1156,5 +1160,3 @@
     </script>
 </body>
 </html>
-
-all good but in this code the pop up is in bloked so ask to permission ok please
