--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
 
             <div class="video-container" id="video-container">
                 <div class="video-wrapper">
-                    <iframe id="tutorial-video" src="https://www.youtube.com/shorts/HtcezRZlAHU" title="Tutorial Video" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe id="tutorial-video" src="https://www.youtube.com/shorts/lDVSH7oTB6k" title="Tutorial Video" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="video-instructions">
                     <p>Please watch the tutorial video before proceeding to the portal</p>
